pyccndir = $(PYTHON_SITE_PKG)/pyccn
#pyccnstagingdir = $(pyccndir)/staging

pyccn_PYTHON = \
	pyccn/__init__.py \
	pyccn/CCN.py \
	pyccn/Closure.py \
	pyccn/ContentObject.py \
	pyccn/Interest.py \
	pyccn/Key.py \
	pyccn/Name.py \
	pyccn/Repository.py \
	pyccn/utils.py

#pyccnstaging_PYTHON = \
#	pyccn/staging/__init__.py \
#	pyccn/staging/RepoControl.py
