pyccndir = $(PYTHON_SITE_PKG)/pyccn
pyccnimpldir = $(pyccndir)/impl
#pyccnstagingdir = $(pyccndir)/staging

pyccn_PYTHON = \
	pyccn/__init__.py \
	pyccn/CCN.py \
	pyccn/Closure.py \
	pyccn/ContentObject.py \
	pyccn/Interest.py \
	pyccn/Key.py \
	pyccn/Name.py \
	pyccn/Repository.py \
	pyccn/utils.py

pyccnimpl_PYTHON = \
	pyccn/impl/__init__.py \
	pyccn/impl/segmenter.py

#pyccnstaging_PYTHON = \
#	pyccn/staging/__init__.py \
#	pyccn/staging/RepoControl.py
