#TEST_ENVIRONMENT = $(PYTHON) -t -3

TESTS = \
	importModule.py \
	ccnConnection.py \
	ccnRun.py \
	names.py \
	get.py \
	expressInterest.py \
	generateKey.py \
	defaultKey.py \
	ContentObject.py \
	key.py \
	signing.py \
	simpleCommunication.py \
	receiving.py

TEST_EXTENSIONS = .py
PY_LOG_COMPILER = $(PYTHON)
AM_PY_LOG_FLAGS = -v

#%.gdb: %
#	gdb $(TESTS_ENVIRONMENT) $*
