#TEST_ENVIRONMENT = ./run

TESTS = \
	importModule.py \
	enums.py \
	ccnConnection.py \
	ccnRun.py \
	names.py \
	get.py \
	expressInterest.py \
	generateKey.py \
	defaultKey.py \
	ContentObject.py \
	ContentObject2.py \
	key.py \
	keyExportPEM.py \
	keyExportDER.py \
	signing.py \
	simpleCommunication.py \
	receiving.py \
	exclusions.py \
	interest.py \
	namecrypto.py

check_SCRIPTS = run

TEST_EXTENSIONS = .py
PY_LOG_COMPILER = ./run
#AM_PY_LOG_FLAGS = -v

#%.gdb: %
#	gdb $(TESTS_ENVIRONMENT) $*
